<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:padding="10dp"
                    android:text="@string/tvLangue"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spLangues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:overlapAnchor="false" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tvQuestion"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtQuestion"
                style="@style/editTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:hint="@string/hintQuestion"
                android:inputType="text" />

            <Button

                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnSubmit" />

            <RelativeLayout
                android:layout_margin="10dp"
                android:id="@+id/layoutCauTraLoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:gravity="center"
                    android:id="@+id/tvAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="60dp"
                    android:text="demo"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imgYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:src="@drawable/yes" />


                    <ImageView
                        android:id="@+id/imgNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:src="@drawable/no" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp">

                <TextView
                    android:id="@+id/tvHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/tvHistory"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOthersQuetion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/tvOthersQuestion"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8955613125144237/2876700855"></com.google.android.gms.ads.AdView>

</RelativeLayout>
